--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,7 +6,16 @@
   <title>My Tweets</title>
 </head>
 <body>
-  <h1>Embedded Tweets</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+        <h1>Embedded Tweets</h1>
 
   <blockquote class="twitter-tweet">
     <p lang="en" dir="ltr">The Earth is what we all have in common. 🌍<br><br>– Wendell Berry</p>
@@ -20,7 +29,15 @@
     </p>&mdash; LANGERIUS (@langeriuseth) <a href="https://twitter.com/langeriuseth/status/1968529324518084852?ref_src=twsrc%5Etfw">September 18, 2025</a>
 </blockquote> 
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
 
-  <p><a href="index.html">Back to homepage</a></p>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Yves Nweke - <a href="https://github.com/Black-Emperor33" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
