--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Nature Page </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Nature Page</title>
 </head>
 <body>
-    <h1>The Beauty of Nature</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <p>Nature surrounds us with mountains, forests, rivers, and skies that inspire peace and wonder. It provides the resources we need to live and creates places for exploration and reflection.</p>
+  <main>
+    <article>
+      <h1>The Beauty of Nature</h1>
 
-    <h2>Forests and Wildlife</h2>
-    <p>Forests are home to countless species of plants and animals. They play a vital role in balancing the Earth's climate, producing oxygen, and offering shelter to wildlife.</p>
+      <p>Nature surrounds us with mountains, forests, rivers, and skies that inspire peace and wonder. It provides the resources we need to live and creates places for exploration and reflection.</p>
 
-    <h3>The Importance of Water</h3>
-    <p>Rivers, lakes, and oceans are not just beautiful to look at - they sustain ecosystems, support biodiversity, and supply fresh water essential for all living beings.</p>
+      <h2>Forests and Wildlife</h2>
+      <p>Forests are home to countless species of plants and animals. They play a vital role in balancing the Earth's climate, producing oxygen, and offering shelter to wildlife.</p>
 
-    <p>By protecting nature, we also protect ourselves. Conservation ensures that future generations can enjoy the same beauty and benefits that we experience today.</p>
-<p>
-    <a href="https://www.nationalgeographic.com/environment" target="_blank" rel="noopener noreferrer" title="Explore Environment at National Geographic">Visit here for more on nature</a>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/02/Mountain_range.jpg"
-           alt="Snow-covered mountain range (Mt. Hayes)" width="600" height="401">
-  </p>
+      <h3>The Importance of Water</h3>
+      <p>Rivers, lakes, and oceans are not just beautiful to look at - they sustain ecosystems, support biodiversity, and supply fresh water essential for all living beings.</p>
+
+      <p>By protecting nature, we also protect ourselves. Conservation ensures that future generations can enjoy the same beauty and benefits that we experience today.</p>
+
+      <p>
+        <a href="https://www.nationalgeographic.com/environment" target="_blank" rel="noopener noreferrer" title="Explore Environment at National Geographic">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/0/02/Mountain_range.jpg"
+               alt="Snow-covered mountain range (Mt. Hayes)" width="600" height="401">
+        </a>
+      </p>
+
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Yves Nweke <a href="https://github.com/Black-Emperor33" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
