--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <p>Made by Yves Nweke <a href="https://github.com/Black-Emperor33" target="_blank">here</a></p>
+    <p>Made by Yves Nweke - <a href="https://github.com/Black-Emperor33" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
